[gd_scene load_steps=2 format=3 uid="uid://dgqgkdkne6phe"]

[ext_resource type="Script" uid="uid://h8byss74oo3w" path="res://addons/ScriptToTab/Interface/interface.gd" id="1_w1yf7"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 724.0
offset_bottom = 636.0
script = ExtResource("1_w1yf7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileDock" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="resize" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2
mouse_default_cursor_shape = 15
color = Color(1, 1, 1, 0.0313726)

[node name="handle" type="ColorRect" parent="VBoxContainer/HBoxContainer/resize"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(3, 28)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.827202, 0.390772, 0, 1)

[node name="ScriptDock" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(1, 1, 1, 0.0784314)

[node name="OptionsFooter" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SidePanel" type="CheckBox" parent="VBoxContainer/OptionsFooter"]
layout_mode = 2
tooltip_text = "Hide scripts and methods list pannel"
text = "Hide side panel"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/OptionsFooter"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
color = Color(1, 1, 1, 0.0823529)

[node name="SwitchPannels" type="CheckBox" parent="VBoxContainer/OptionsFooter"]
layout_mode = 2
tooltip_text = "Move FileExplorer to left or right"
text = "Switch Pannels"

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/OptionsFooter"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="VBoxContainer/OptionsFooter"]
modulate = Color(1, 1, 1, 0.482353)
layout_mode = 2
text = "Ctrl+K to toggle"

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/OptionsFooter"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
color = Color(1, 1, 1, 0.0823529)

[node name="FileExplorer" type="CheckBox" parent="VBoxContainer/OptionsFooter"]
layout_mode = 2
tooltip_text = "Move FileExplorer to this pannel to act like an IDE"
text = "File Explorer"

[node name="RevealInFileExplorer" type="CheckBox" parent="VBoxContainer/OptionsFooter"]
layout_mode = 2
tooltip_text = "Selects the current file in File Explorer"
text = "Show in File Explorer"

[node name="IngoreAddons" type="CheckBox" parent="VBoxContainer/OptionsFooter"]
layout_mode = 2
tooltip_text = "Ignore file selection if the files is an addon"
text = "Ignore /addons"
